--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "artsy-ezel-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A library of UI components shared across Artsy's Ezel-based apps.",
   "keywords": [
     "ezel",
@@ -9,7 +9,7 @@
     "jade"
   ],
   "scripts": {
-    "test": "mocha pagination/test"
+    "test": "mocha **/test/*.coffee"
   },
   "author": {
     "name": "Craig Spaeth",
@@ -32,9 +32,13 @@
     "should": "*",
     "jade": "*",
     "benv": "*",
+    "cheerio": "*",
     "coffee-script": "*",
     "underscore": "*",
-    "jquery": "*"
+    "jquery": "*",
+    "express": "*",
+    "q": "*",
+    "superagent": "*"
   },
   "repository": {
     "type": "git",
