--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "benv": "*",
     "coffee-script": "*",
     "underscore": "*",
-    "jquery": "*"
+    "jquery": "*",
+    "express": "*",
+    "stylus": "*"
   },
   "repository": {
     "type": "git",
